tests/sawn/fixtures/valid/26_anonymous_root_with_objects.sawn
// Test: Anonymous root array containing object elements
[]
  {}
    name="Alice"
    age=30
  {}
    name="Bob"
    age=25
