tests/sawn/fixtures/invalid/21_duplicate_keys.sawn
// INVALID: Duplicate keys within same object
name="Alice"
age=30
name="Bob"
